switching from method level security to global config